--- a/app/Resources/views/default/sources.html.twig
+++ b/app/Resources/views/default/sources.html.twig
@@ -1,6 +1,6 @@
-{% extends "::base.html.twig" %}
+{% extends "::layout.html.twig" %}
 
-{% block body %}
+{% block content %}
     <div class="container">
         <ol class="source-list">
             {% for source in sources %}
