--- a/app/Resources/views/graph/relations.html.twig
+++ b/app/Resources/views/graph/relations.html.twig
@@ -1,5 +1,7 @@
 {% extends "layout.html.twig" %}
 
+{% set renderFooter = false %}
+
 {% block content %}
 <div id="relations"></div>
 {% endblock %}
@@ -8,39 +10,156 @@
     <style type="text/css">
         body, html {
             height: 100%;
-            margin: 0;
-            padding: 0;
         }
         #relations {
-            width: 800px;
-            height: 500px;
-            margin-top: 50px;
+            position: absolute;
+            top: 50px;
+            bottom:0;
+            left:0;
+            right: 0;
         }
     </style>
 {% endblock %}
 
 {% block javascripts %}
 <script type="text/javascript">
-    var nodes = new vis.DataSet({{ nodes|json_encode|raw }});
-    var edges = new vis.DataSet({{ edges|json_encode|raw }});
-    var network = new vis.Network(
-        document.getElementById('relations'), // container
-        {nodes: nodes,edges: edges}, // data
-        {
+    var network;
+    var allNodes;
+    var highlightActive = false;
+
+    var nodesDataset = new vis.DataSet({{ nodes|json_encode|raw }});
+    var edgesDataset = new vis.DataSet({{ edges|json_encode|raw }});
+
+    function redrawAll() {
+        var container = document.getElementById('relations');
+        var options = {
             layout: {
                 improvedLayout: false
             },
             nodes: {
                 shape: 'dot',
                 scaling: {
-                    customScalingFunction: function (min,max,total,value) {
-                        return max*(value/total);
-                    },
-                    min:5,
-                    max:150
+                    min: 5,
+                    max: 50,
+                    label: {
+                        min: 8,
+                        max: 30,
+                        drawThreshold: 12,
+                        maxVisible: 20
+                    }
+                },
+                font: {
+                    size: 12,
+                    face: 'Tahoma'
+                }
+            },
+            edges: {
+                width: 0.15,
+                color: {inherit: 'from'},
+                smooth: {
+                    type: 'continuous'
+                }
+            },
+            physics: {
+                enabled: true,
+                barnesHut: {
+                    gravitationalConstant: -2000,
+                    centralGravity: 0.3,
+                    springLength: 95,
+                    springConstant: 0.04,
+                    damping: 0.09,
+                    avoidOverlap: 0
+                },
+            },
+            interaction: {
+                tooltipDelay: 200,
+                hideEdgesOnDrag: true
+            }
+        };
+        var data = {nodes:nodesDataset, edges:edgesDataset};
+
+
+        network = new vis.Network(container, data, options);
+
+        // get a JSON object
+        allNodes = nodesDataset.get({returnType:"Object"});
+
+        network.on("click",neighbourhoodHighlight);
+    }
+
+    function neighbourhoodHighlight(params) {
+        // if something is selected:
+        if (params.nodes.length > 0) {
+            highlightActive = true;
+            var i,j;
+            var selectedNode = params.nodes[0];
+            var degrees = 2;
+
+            // mark all nodes as hard to read.
+            for (var nodeId in allNodes) {
+                allNodes[nodeId].color = 'rgba(200,200,200,0.5)';
+                if (allNodes[nodeId].hiddenLabel === undefined) {
+                    allNodes[nodeId].hiddenLabel = allNodes[nodeId].label;
+                    allNodes[nodeId].label = undefined;
                 }
             }
-        } // options
-    );
+            var connectedNodes = network.getConnectedNodes(selectedNode);
+            var allConnectedNodes = [];
+
+            // get the second degree nodes
+            for (i = 1; i < degrees; i++) {
+                for (j = 0; j < connectedNodes.length; j++) {
+                    allConnectedNodes = allConnectedNodes.concat(network.getConnectedNodes(connectedNodes[j]));
+                }
+            }
+
+            // all second degree nodes get a different color and their label back
+            for (i = 0; i < allConnectedNodes.length; i++) {
+                allNodes[allConnectedNodes[i]].color = 'rgba(150,150,150,0.75)';
+                if (allNodes[allConnectedNodes[i]].hiddenLabel !== undefined) {
+                    allNodes[allConnectedNodes[i]].label = allNodes[allConnectedNodes[i]].hiddenLabel;
+                    allNodes[allConnectedNodes[i]].hiddenLabel = undefined;
+                }
+            }
+
+            // all first degree nodes get their own color and their label back
+            for (i = 0; i < connectedNodes.length; i++) {
+                allNodes[connectedNodes[i]].color = undefined;
+                if (allNodes[connectedNodes[i]].hiddenLabel !== undefined) {
+                    allNodes[connectedNodes[i]].label = allNodes[connectedNodes[i]].hiddenLabel;
+                    allNodes[connectedNodes[i]].hiddenLabel = undefined;
+                }
+            }
+
+            // the main node gets its own color and its label back.
+            allNodes[selectedNode].color = undefined;
+            if (allNodes[selectedNode].hiddenLabel !== undefined) {
+                allNodes[selectedNode].label = allNodes[selectedNode].hiddenLabel;
+                allNodes[selectedNode].hiddenLabel = undefined;
+            }
+        }
+        else if (highlightActive === true) {
+            // reset all nodes
+            for (var nodeId in allNodes) {
+                allNodes[nodeId].color = undefined;
+                if (allNodes[nodeId].hiddenLabel !== undefined) {
+                    allNodes[nodeId].label = allNodes[nodeId].hiddenLabel;
+                    allNodes[nodeId].hiddenLabel = undefined;
+                }
+            }
+            highlightActive = false
+        }
+
+        // transform the object into an array
+        var updateArray = [];
+        for (nodeId in allNodes) {
+            if (allNodes.hasOwnProperty(nodeId)) {
+                updateArray.push(allNodes[nodeId]);
+            }
+        }
+        nodesDataset.update(updateArray);
+    }
+
+    redrawAll()
 </script>
 {% endblock %}
