--- a/app/Resources/views/map/debug.html.twig
+++ b/app/Resources/views/map/debug.html.twig
@@ -18,11 +18,13 @@
     </style>
 {% endblock %}
 
+{% set enableMap = true %}
+
 {% block javascripts %}
     <script type="text/javascript">
         var map;
         var places = {{ places|json_encode|raw }};
-        function initMap() {
+        $('body').one('map:ready', function() {
             map = new google.maps.Map(document.getElementById('map'), {
                 center: {lat: -34.397, lng: 150.644},
                 zoom: 8,
@@ -49,7 +51,6 @@
                 bounds.extend(pos);
             });
             map.fitBounds(bounds);
-        }
+        });
     </script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBAj3xGeT4xh_SJyqeiPJqMKHY0UnQV2Eg&callback=initMap" async defer></script>
 {% endblock %}
