--- a/app/Resources/less/bootstrap.less
+++ b/app/Resources/less/bootstrap.less
@@ -62,5 +62,8 @@
 
 @import "../vendor/bootstrap-select/less/bootstrap-select.less";
 
+@import "../../../vendor/seiyria/bootstrap-slider/less/variables.less";
+@import "../../../vendor/seiyria/bootstrap-slider/less/rules.less";
+
 @import "custom.less";
 
