--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -12,45 +12,41 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="{{ path('homepage') }}">JSN</a>
+                <a class="navbar-brand" href="{{ path('homepage') }}">JSN <span class="beta">beta</span></a>
             </div>
 
             <div class="collapse navbar-collapse" id="navbar-collapse">
                 <ul class="nav navbar-nav">
-                    <li><a href="{% if 'homepage' != route %}{{ path('homepage') }}{% endif %}#about">About</a></li>
-                    <li><a href="{% if 'homepage' != route %}{{ path('homepage') }}{% endif %}#jesuit-science">Jesuit sciences</a></li>
-                    <li><a href="{% if 'homepage' != route %}{{ path('homepage') }}{% endif %}#sources">Sources</a></li>
-                </ul>
-                <ul class="nav navbar-nav navbar-right">
-                    <li{% if 'search' == route %} class="active"{% endif %}><a href="{{ path('search') }}">Advanced search</a></li>
-                    <li class="dropdown{% if 'list' == route or 'subjects' == route or 'subjects_grouped' == route or 'places' == route or 'places_grouped' == route or 'occupations' == route or 'map' == route or 'graph' == route %} active{% endif %}">
+                    <li{% if 'about' == route %} class="active"{% endif %}><a href="{{ path('about') }}">About</a></li>
+                    <li class="divider-vertical"></li>
+                    <li class="dropdown{% if 'list' == route or 'list_nonjesuits' == route or 'subjects' == route or 'subjects_grouped' == route or 'places' == route or 'places_grouped' == route or 'occupations' == route or 'sources' == route %} active{% endif %}">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Browse <span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li class="dropdown-header">Persons</li>
                             <li><a href="{{ path('list') }}">Jesuits</a></li>
                             <li><a href="{{ path('list_nonjesuits') }}">Non-Jesuits</a></li>
-                            <li role="separator" class="divider"></li>
-                            <li class="dropdown-header">Lists</li>
+                            <li class="divider"></li>
                             <li><a href="{{ path('subjects') }}">Subjects</a></li>
                             <li><a href="{{ path('places') }}">Places</a></li>
                             <li><a href="{{ path('occupations') }}">Occupations</a></li>
-                            <li role="separator" class="divider"></li>
-                            <li class="dropdown-header">Visualizations</li>
-                            <li><a href="{{ path('map') }}">Map</a></li>
-                            <li><a href="#">Graphs</a></li>
-                            <li><a href="{{ path('graph_relations') }}">Relations</a></li>
+                            <li class="divider"></li>
+                            <li><a href="{{ path('sources') }}">Sources</a></li>
                         </ul>
                     </li>
+                    <li class="divider-vertical"></li>
+                    <li{% if 'relations' == route %} class="active"{% endif %}><a href="{{ path('relations') }}">Relations</a></li>
+                    <li{% if 'map' == route %} class="active"{% endif %}><a href="{{ path('map') }}">Map</a></li>
+                    <li{% if 'analysis' == route %} class="active"{% endif %}><a href="#">Analysis</a></li>
+                </ul>
+                <ul class="nav navbar-nav navbar-right">
+                    <li{% if 'search' == route %} class="active"{% endif %}><a href="{{ path('search') }}">{{ icon('search') }}</a></li>
                 </ul>
                 <form class="navbar-form navbar-right" role="search" action="{{ path('search') }}" method="POST">
                     <div class="form-group">
                         <input
                                 id="jsn-search"
-                                data-url="{{ path('autocomplete_persons') }}?q=%QUERY"
-                                data-url-places="{{ path('autocomplete_places') }}?q=%QUERY"
                                 type="text"
-                                class="form-control search"
-                                placeholder="Search the JSN"
+                                class="form-control search js-autocomplete js-quicksearch"
+                                placeholder="Quick Search"
                                 >
                     </div>
                 </form>
@@ -61,6 +57,7 @@
 
     {% block content %}{% endblock %}
 
+    {% if renderFooter is not defined or renderFooter %}
     <footer>
         <div class="container logos">
             <div class="col-sm-12">
@@ -74,7 +71,7 @@
         </div>
         <div class="footer">
             <div class="container">
-                <div class="col-sm-4">
+                <div class="col-sm-4 col-xs-12">
                     <h4>Partners</h4>
                     <p>
                         The project behind the Jesuit Science Network is funded by the <a href="http://www.dfg.de/en/">DFG</a>
@@ -86,7 +83,7 @@
                         editing tools are powered by the <a href="http://pdr.bbaw.de/english">Person Data Repository</a> project at the <a href="http://www.bbaw.de/en/">Berlin-Brandenburg Academy of Sciences and Humanities</a>.
                     </p>
                 </div>
-                <div class="col-sm-4 text-right">
+                <div class="col-sm-4 col-xs-6 text-right">
                     <h4>Project manager</h4>
 
                     <p>
@@ -102,7 +99,7 @@
                         mrozik@<span class="hidden">null</span>uni-wuppertal.de
                     </p>
                 </div>
-                <div class="col-sm-4">
+                <div class="col-sm-4 col-xs-6">
                     <h4>Contact address</h4>
 
                     <p>
@@ -118,10 +115,18 @@
         </div>
         <div class="black-bar">
             <div class="container">
-                <div class="col-xs-12">
+                <div class="col-sm-6 col-sm-push-6">
+                    {% set stats = stats() %}
+                    <p class="version">Version {{ stats.lm|date('m/d/Y') }}
+                        &bull;
+                        {{ stats.nb }} entries in database
+                    </p>
+                </div>
+                <div class="col-sm-6 col-sm-pull-6">
                     <p>Copyright 2015 by someone. All rights reserved. <a href="{{ path('imprint') }}">Imprint</a></p>
                 </div>
             </div>
         </div>
     </footer>
+    {% endif %}
 {% endblock %}
