--- a/app/Resources/views/include/searchbox.html.twig
+++ b/app/Resources/views/include/searchbox.html.twig
@@ -49,6 +49,7 @@
                 </div>
                 <input type="hidden" name="lat" value="" id="where-lat" />
                 <input type="hidden" name="lng" value="" id="where-lng" />
+                <input type="hidden" name="place" value="" id="where-descr" />
             </form>
 
             <p class="text-center" style="margin-bottom: 0;">
